# VocT_v2

./: .gitignore  CMakeLists.txt  start_VocT.sh
Dictionary/: CMakeLists.txt  Db.cpp  Db.h  Dictionary.cpp  Dictionary.h
Menu/: CMakeLists.txt  Menu.cpp  Menu.h  cli.cpp
common/: CMakeLists.txt  Log.cpp  Log.h  common.h  utility.cpp
ipc/: CMakeLists.txt  msq_ops.c  msq_ops.h
